--- a/portfolio_planner.ipynb
+++ b/portfolio_planner.ipynb
@@ -13,23 +13,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Bad key savefig.frameon in file C:\\Users\\andrew\\anaconda3\\envs\\pyvizen\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 421 ('savefig.frameon : True')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.0/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n",
+      "\n",
+      "Bad key verbose.level in file C:\\Users\\andrew\\anaconda3\\envs\\pyvizen\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 472 ('verbose.level  : silent      # one of silent, helpful, debug, debug-annoying')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.0/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n",
+      "\n",
+      "Bad key verbose.fileo in file C:\\Users\\andrew\\anaconda3\\envs\\pyvizen\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle, line 473 ('verbose.fileo  : sys.stdout  # a log filename, sys.stdout or sys.stderr')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.3.0/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n",
+      "In C:\\Users\\andrew\\anaconda3\\envs\\pyvizen\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The text.latex.preview rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
+      "In C:\\Users\\andrew\\anaconda3\\envs\\pyvizen\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The mathtext.fallback_to_cm rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
+      "In C:\\Users\\andrew\\anaconda3\\envs\\pyvizen\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: Support for setting the 'mathtext.fallback_to_cm' rcParam is deprecated since 3.3 and will be removed two minor releases later; use 'mathtext.fallback : 'cm' instead.\n",
+      "In C:\\Users\\andrew\\anaconda3\\envs\\pyvizen\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The validate_bool_maybe_none function was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
+      "In C:\\Users\\andrew\\anaconda3\\envs\\pyvizen\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The savefig.jpeg_quality rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
+      "In C:\\Users\\andrew\\anaconda3\\envs\\pyvizen\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The keymap.all_axes rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
+      "In C:\\Users\\andrew\\anaconda3\\envs\\pyvizen\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The animation.avconv_path rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
+      "In C:\\Users\\andrew\\anaconda3\\envs\\pyvizen\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test.mplstyle: \n",
+      "The animation.avconv_args rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import libraries and dependencies\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
     "from datetime import datetime, timedelta\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "import alpaca_trade_api as tradeapi\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,12 +98,12 @@
     "load_dotenv()\n",
     "\n",
     "# Set Alpaca API key and secret\n",
-    "alpaca_api_key = os.getenv(\"ALPACA_API_KEY\")\n",
+    "alpaca_api_id = os.getenv(\"ALPACA_API_ID\")\n",
     "alpaca_secret_key = os.getenv(\"ALPACA_SECRET_KEY\")\n",
     "\n",
     "# Create the Alpaca API object\n",
     "api = tradeapi.REST(\n",
-    "    alpaca_api_key,\n",
+    "    alpaca_api_id,\n",
     "    alpaca_secret_key,\n",
     "    api_version=\"v2\")"
    ]
@@ -80,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,9 +154,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>AGG</th>\n",
+       "      <th>SPY</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>close</th>\n",
+       "      <th>close</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-02 00:00:00-05:00</th>\n",
+       "      <td>106.585</td>\n",
+       "      <td>249.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-03 00:00:00-05:00</th>\n",
+       "      <td>107.020</td>\n",
+       "      <td>244.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-04 00:00:00-05:00</th>\n",
+       "      <td>106.695</td>\n",
+       "      <td>252.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-07 00:00:00-05:00</th>\n",
+       "      <td>106.470</td>\n",
+       "      <td>254.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-08 00:00:00-05:00</th>\n",
+       "      <td>106.420</td>\n",
+       "      <td>256.65</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               AGG     SPY\n",
+       "                             close   close\n",
+       "time                                      \n",
+       "2019-01-02 00:00:00-05:00  106.585  249.89\n",
+       "2019-01-03 00:00:00-05:00  107.020  244.46\n",
+       "2019-01-04 00:00:00-05:00  106.695  252.41\n",
+       "2019-01-07 00:00:00-05:00  106.470  254.40\n",
+       "2019-01-08 00:00:00-05:00  106.420  256.65"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display sample data\n",
     "df.head()"
@@ -391,9 +515,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:pyvizen] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-pyvizen-py"
   },
   "language_info": {
    "codemirror_mode": {
